# epson-multi-tone

./: .gitignore  LICENSE  README.md  multitone.py  pyproject.toml
.github/workflows/: main.yml
assets/: packed-to-planar.drawio
src/epson_multi_tone/: __init__.py  multitone.py
src/multitone/: multitone.py
tests/: test_epson_multi_tone.py
