[tool.poetry]
name = "epson-multi-tone"
version = "0.1.0"
description = "Multi-tone printing on TM-T88V, TM-T88VI, TM-T88VI and other thermal receipt printers from Epson"
authors = ["Dalpil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^10.4.0"
numpy = "^1.26.4"
numba = "^0.60.0"
click = "^8.1.7"

[tool.poetry.scripts]
epson = 'epson_multi_tone.multitone:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
