[project]
name = "epson-multi-tone"
version = "0.1.0"
description = "Multi-tone printing on TM-T88V, TM-T88VI, TM-T88VI and other thermal receipt printers from Epson"
author = "dalpil"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "numba",
    "numpy",
    "pillow>=10.4.0",
]

[project.scripts]
epson = "epson_multi_tone:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
